<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_meeting_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salle_de_r_union"
                android:textColor="@color/textcolor"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_meeting_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:entries="@array/salle_de_r_union"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_meeting_subject"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/sujet_de_la_r_union"
            android:textColor="@color/textcolor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_subject_meeting"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/sujet_de_la_r_union"
            android:inputType="text"
            android:gravity="center"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tv_date_meeting"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/date_de_la_r_union"
            android:textSize="24sp"
            android:textColor="@color/textcolor"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <DatePicker
                android:id="@+id/dp_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TimePicker
                android:id="@+id/tp_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_meeting_participants"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/participants_la_r_union"
            android:textColor="@color/textcolor"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp" />

        <Spinner
            android:id="@+id/sp_add_user_to_meeting"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_add_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ajouter_un_participant"
            android:textColor="@color/textcolor"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_participant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/btn_add_meeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:textColor="@color/textcolor"
            android:textStyle="bold"
            android:text="@string/cr_er_la_r_union" />
    </LinearLayout>
</ScrollView>